# citeproc-rs

./: Cargo.toml  README.md
bindings/ffi/src/: macros.rs
crates/citeproc/: Cargo.toml
crates/citeproc/tests/: suite.rs
crates/citeproc/tests/data/: ignore.txt
crates/citeproc/tests/test_format/: mod.rs
crates/cli/: Cargo.toml
crates/csl/: Cargo.toml
crates/csl/src/: attr.rs  error.rs  lib.rs  locale.rs  terms.rs  test.rs  variables.rs
crates/csl/src/style/: mod.rs
crates/csl/src/style/snapshots/: csl__style__info__test__localized_string-3.snap  csl__style__info__test__localized_string-4.snap
crates/io/: Cargo.toml
crates/io/src/: csl_json.rs  lazy.rs  names.rs  numeric.rs  text_case.rs
crates/io/src/output/: parse_quotes.rs
crates/io/src/output/markup/: html.rs  move_punctuation.rs  rtf.rs
crates/pandoc-types/: Cargo.toml
crates/proc/: Cargo.toml
crates/proc/src/: date.rs  db.rs  element.rs  helpers.rs  lib.rs  page_range.rs  tree.rs  walker.rs
crates/proc/src/disamb/: implementation.rs
crates/proc/src/sort/: natural_sort.rs
