# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[workspace]
members = [ "crates/*", "bindings/ffi" ]
# for running `cargo test`, `cargo doc` etc at the workspace root
# wasm is built via wasm-pack for the wasm32 target, not by a native
# `cargo build`; keep it out of default-members so root builds/tests are native.
default-members = [
  "crates/csl",
  "crates/io",
  "crates/db",
  "crates/proc",
  "crates/citeproc",
  "bindings/ffi",
]
resolver = "2"

[profile.dev]
# rust 1.51 release notes -- replaces dsymutil on macOS, faster dev builds
split-debuginfo = "unpacked"

[profile.bench]
lto = "thin"
# flamegraph with cargo test --release
debug = true

[profile.release]
lto = "thin"
debug = false

# [profile.dev]
# rpath = true

[patch.'crates-io'.wasm-bindgen]
version = "0.2.78"
git = "https://github.com/cormacrelf/wasm-bindgen"
tag = "no-unwrap"
