[package]
name = "citeproc-cli"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2018"

[[bin]]
name = "citeproc-rs"
path = "src/main.rs"

[features]
default = []
# jemalloc is Unix-only (unsupported on Windows MSVC). Enable with
# `--features jemalloc` on Linux/macOS for a faster allocator.
jemalloc = ["jemallocator"]

[dependencies]
citeproc = { path = "../citeproc" }
csl = { path = "../csl" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", optional = true }
